[project]
name = "noahs_helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
